# price_server

./: .clang-format  .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  conanfile.py
.proto/: generate-protobufs.py
src/c++/: main.cc  server.cc  server.h  session.cc  session.h  session_manager.cc  session_manager.h
src/c++/tools/logger/: logger_storage.h
